--- a/files/index.html
+++ b/files/index.html
@@ -6,8 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
+  <h1 class="text-3xl font-bold mx-auto">
+    Hello {{ server_name }}!
   </h1>
 </body>
 </html>
