use ansible_facts in playbook

--- a/files/index.html
+++ b/files/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h1 class="text-3xl font-bold mx-auto">
-    Hello {{ server_name }}!
+    Hello world!
   </h1>
+	<h2>This is server {{ server_name }}</h2>
 </body>
 </html>
